# sandsim

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: SDL.h.07F7A6F2782E2E6F.idx  SDL_assert.h.C90B8DA8BF4D04FC.idx  SDL_asyncio.h.3515117FC03F67AD.idx  SDL_atomic.h.8C88096B4B89F367.idx  SDL_audio.h.02343C7E8754DB33.idx  SDL_begin_code.h.212A429AB2D1A405.idx  SDL_bits.h.C7F660EB1C16AE9F.idx  SDL_blendmode.h.A8E770D1552D141B.idx  SDL_camera.h.1B677533AD377929.idx  SDL_clipboard.h.6A7C767BC5CE195D.idx  SDL_close_code.h.C4245EEC5044F63F.idx  SDL_cpuinfo.h.A2F0E10999D0D8D2.idx  SDL_dialog.h.54F3E181A1B21028.idx  SDL_endian.h.A564C3469B02FDAB.idx  SDL_error.h.80CFD2DCF4BB8BCF.idx  SDL_events.h.7622B5B266F19DF3.idx  SDL_filesystem.h.8A9689924AC89BEB.idx  SDL_gamepad.h.0688C202C753CDB0.idx  SDL_gpu.h.E80AA9F2BD0358C4.idx  SDL_guid.h.8DEC7BE9BDFDEB5B.idx  SDL_haptic.h.407C5448E2150B4B.idx  SDL_hidapi.h.76871A5F8B47A612.idx  SDL_hints.h.86EB6A078D5E2380.idx  SDL_init.h.56ACA1699716F406.idx  SDL_iostream.h.9B0B09B704F48493.idx  SDL_joystick.h.D93E4CCB524DD3E9.idx  SDL_keyboard.h.A85B0ACBBC251C42.idx  SDL_keycode.h.A93FCEE43C9AB602.idx  SDL_loadso.h.7A4AD4FA19A65950.idx  SDL_locale.h.4ACAC68C3A5ABFC1.idx  SDL_log.h.36B51DE10645FC7D.idx  SDL_messagebox.h.0E24B5EEAA9ADEB2.idx  SDL_metal.h.E088F65C37C42B50.idx  SDL_misc.h.AEF6B3F2AD159FDB.idx  (+26 more)
include/: event_handler.hpp  game_handler.hpp  render_handler.hpp
include/cells/: cell.hpp  cell_chunk.hpp
src/: event_handler.cpp  game_handler.cpp  main.cpp  render_handler.cpp
src/cells/: cell.cpp  cell_chunk.cpp
